<resources>
    <string name="app_name">TomatoAlarmClock</string>
    <string name="work">work</string>
    <string name="study">study</string>
    <string name="think">think</string>
    <string name="write">write</string>
    <string name="sport">sport</string>
    <string name="read">read</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="time">time</string>
    <string name="timer_on_time">Time goes up!</string>
    <string name="roger">roger</string>
    <string name="play_fail">play fail</string>
    <string name="slogan">静下心来，保持专注</string>
</resources>
