<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#3F51B5"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/white_trans90"
        android:textSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <me.takimitsuha.tomatoalarmclock.library.timer.TomatoTimer
                android:id="@+id/timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layerType="software"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timer">

                <LinearLayout
                    android:id="@+id/ll_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="60dp">

                        <TextView
                            android:id="@+id/btn_stop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/bg_timer_pause_btn"
                            android:gravity="center"
                            android:text="@string/stop"
                            android:textColor="@color/white_trans90"
                            android:textSize="14sp"/>

                        <TextView
                            android:id="@+id/btn_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="5dp"
                            android:drawableTop="@drawable/bg_timer_start_btn"
                            android:gravity="center"
                            android:text="@string/start"
                            android:textColor="@color/white_trans90"
                            android:textSize="14sp"
                            android:visibility="gone"/>
                    </FrameLayout>

                    <TextView
                        android:id="@+id/btn_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/bg_timer_reset_btn"
                        android:gravity="center"
                        android:text="@string/reset"
                        android:textColor="@color/white_trans90"
                        android:textSize="14sp"/>

                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
